--- a/index.html
+++ b/index.html
@@ -6,11 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Cake webpage</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <!-- Add a link to your css file here -->
 </head>
 
 <body>
-    <!-- Add your markup here -->
+    <nav>
+        <img src="img/menuicon.png" id="menuicon" alt="menuicon">
+        <ul>
+            <li></li>
+        </ul>
+    </nav>
+    <header>
+        <h3>The Craziest Cakes in town delivered to your door</h3>
+    </header>
+    <section id="welcomesection">
+        <h2>Welcome to our Online Shop</h2>
+        <P>We proudly present our new online cake shop. Featuring amazing pictures of our delightul products with different themes aiming every ocassion.</P>
+    </section>
+    <section id="gallerysection">
+        <h2>Gallery</h2>
+        <div class="gallery"> 
+            <a href="#"> <img src="img/cake 1 yatchzee.jpg" alt="Cake 1"> </a>
+            <div><p>Description Cake 1</p></div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 2 neon medium.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 3 large.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 4  anime large.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 5 large.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 6 large.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 7 ghost large.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <a href="#"> <img src="img/cake 8 yoda large.jpg" alt="Cake 1"> </a>
+            <div>
+                <p>Description Cake 1</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <span> <p> Follow us on:</p></span> 
+        <div>
+          <a href="#"><img src="img/twitter-icon.svg" alt="Twitter"></a>
+            <a href="#"><img src="img/instagram-icon.svg" alt="Instagram"></a>
+            <a href="#"><img src="img/facebook-icon.svg" alt="Facebook"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
