hovers and nav and responsiveness done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <nav>
         <img src="img/menuicon.png" id="menuicon" alt="menuicon">
         <ul>
-            <li></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">CAKES</a></li>
+            <li><a href="#">ORDER-IN</a></li>
+            <li><a href="#">LESSONS</a></li>
+            <li><a href="#">ABOUT</a></li>
         </ul>
     </nav>
     <header>
@@ -25,54 +29,61 @@
     </header>
     <section id="welcomesection">
         <h2>Welcome to our Online Shop</h2>
-        <P>We proudly present our new online cake shop. Featuring amazing pictures of our delightul products with different themes aiming every ocassion.</P>
+        <P>Featuring our amazing catalogue with different cakes aiming every ocassion</P>
     </section>
     <section id="gallerysection">
         <h2>Gallery</h2>
-        <div class="gallery"> 
-            <a href="#"> <img src="img/cake 1 yatchzee.jpg" alt="Cake 1"> </a>
-            <div><p>Description Cake 1</p></div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 2 neon medium.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
+        <div id="galleryrow">
+            <div class="gallerycolumn">
+                <div class="gallery"> 
+                    <a href="#"> <img src="img/cake 1 yatchzee.jpg" alt="Cake 1"> </a>
+                    <div><p>Description Cake 1</p></div>
+                </div>
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 2 neon medium.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 2</p>
+                    </div>
+                </div>
+            
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 3 large.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 3</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 4  anime large.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 4</p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 3 large.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 4  anime large.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 5 large.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 6 large.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 7 ghost large.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <a href="#"> <img src="img/cake 8 yoda large.jpg" alt="Cake 1"> </a>
-            <div>
-                <p>Description Cake 1</p>
+            <div class="gallerycolumn">
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 5 large.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 5</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 6 large.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 6</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 7 ghost large.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 7</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <a href="#"> <img src="img/cake 8 yoda large.jpg" alt="Cake 1"> </a>
+                    <div>
+                        <p>Description Cake 8</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
